Made max width for marker name on map to prevent hiding arrow/enable wrapping of text

--- a/css/main.css
+++ b/css/main.css
@@ -185,6 +185,7 @@ h2 {
 .gm-style-iw .name {
 	color: #3E3E3E;
 	padding: 1% 1% 1% 0;
+	width: 200px;
 }
 
 .markercontainer {
